Fix the plans table so it doesn't break the layout on tablet size

--- a/Website/frontend/assets/css/_sass/partials/_enrollment.scss
+++ b/Website/frontend/assets/css/_sass/partials/_enrollment.scss
@@ -1059,6 +1059,10 @@
                     text-align: left;
                     padding-left: 20px;
                 }
+                @include breakpoint(medium) {
+                    min-width: 0;
+                    padding: 10px 5px;
+                }
             }
         }
         td, th {
@@ -1130,7 +1134,14 @@
                 color: #5cab0d;
                 border: none;
                 outline: none;
-                background: #fff none;
+                background: transparent none;
+            }
+            @include breakpoint(medium) {
+                min-width: 0;
+                padding: 10px 15px;
+                &.secondary {
+                    padding: 5px;
+                }
             }
         }
         .vertical {
@@ -1209,6 +1220,10 @@
             padding: 15px;
             border-right: none;
             vertical-align: middle;
+            @include breakpoint(medium) {
+                min-width: 0;
+                padding: 15px 5px;
+            }
         }
         .selected-icon {
             position: absolute;
@@ -1347,6 +1362,9 @@
             font-size: 12px;
             margin-left: 12px;
             padding-top: 6px;
+        }
+        @include breakpoint(medium) {
+            min-width: 0;
         }
     }
 }
